added backwards-compatibility for printing JavaDoc